--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -37,6 +37,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :agreement %><br />
+    <%= form.check_box :agreement %>
+  </div>
+
+  <div class="field">
     <%= form.label :reviews_count %>
     <%= form.number_field :reviews_count %>
   </div>
