--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :email_confirmation %><br />
+    <%= form.text_field :email_confirmation %>
+  </div>
+
+  <div class="field">
     <%= form.label :dm %>
     <%= form.check_box :dm %>
   </div>
